# netbox-vrf-ext

./: .flake8  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  test.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yml  linting.yaml  publish-pypi.yaml
changelog/: index.html
configuration/: configuration.py  plugins.py
contributing/: index.html
docker-develop/: README.md  configuration.py  docker-compose.yml
netbox_vrf_ext/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
netbox_vrf_ext/api/: serializers.py  urls.py  views.py
netbox_vrf_ext/management/commands/: setup_vrfinstance_example_data.py  setup_vrfinstance_fields.py
netbox_vrf_ext/migrations/: 0001_initial.py
netbox_vrf_ext/templates/netbox_vrf_ext/: netbox-vrf-ext.html
netbox_vrf_ext/templates/netbox_vrf_ext/inc/: vrf_add_button.html
search/: search_index.json
tests/: __init__.py  test_api.py  test_netbox_vrf_ext.py
