# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "netbox-vrf-ext"
version = "0.1.0"
authors = [
    {name = "Chris Russell", email = "cruse1977123@gmail.com"},
]
description = "Netbox Plugin Extending VRF Support"
readme = "README.md"

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Telecommunications Industry',
    'Natural Language :: English',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Framework :: Django',
    'Topic :: System :: Networking',
    'Topic :: Internet'
]

requires-python = ">=3.10.0"

[project.optional-dependencies]
test = [
    "black==24.3.0",
    "check-manifest==0.49",
    "flake8",
    "flake8-pyproject",
    "pre-commit==3.7.0",
    "pytest==8.1.1",
]

[project.urls]
Documentation = "https://github.com/cruse1977/netbox-vrf-ext/blob/main/README.md"
Source = "https://github.com/cruse1977/netbox-vrf-ext"
Tracker = "https://github.com/cruse1977/netbox-vrf-ext/issues"

[tool.black]
line-length = 140
target_version = ['py310', 'py311', 'py312']

[tool.setuptools.package-data]
netbox_vrf_ext = ["templates/**"]

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.pylint]
max-line-length = 140

[tool.pyright]
include = ["netbox_vrf_ext"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 140

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["netbox_vrf_ext"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

